# wit-bindgen-pure-go

./: .gitignore  Makefile  README.md  host.rs
go-example/: go.mod  main.go
go-example/host/: host.c  host.go  host.h
go-example/wit/: host.wit
host/: Cargo.toml
host/src/: main.rs
rust-example/: Cargo.toml
rust-example/src/: lib.rs
