[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v10.0.1", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v10.0.1", features = ["preview2"] }
